--- a/tsconfig.json
+++ b/tsconfig.json
@@ -9,7 +9,8 @@
     "jsx": "preserve",
     "jsxImportSource": "solid-js",
     "types": [
-      "vite/client"
+      "vite/client",
+      // "node"
     ],
     "noEmit": true,
     "isolatedModules": true
